--- a/lade_xgb_decision_web/frontend/dataset.html
+++ b/lade_xgb_decision_web/frontend/dataset.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dataset Explorer - LaDe</title>
+    <title>Penjelajah Dataset - LaDe</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,18 +12,18 @@
 <body>
     <div class="container">
         <header>
-            <a href="/" class="logo">Entropiata Logistics</a>
+            <a href="/" class="logo">Sistem Monitoring Risiko Keterlambatan</a>
             <nav>
-                <a href="/">Home</a>
+                <a href="/">Beranda</a>
                 <a href="/dataset.html" class="active">Dataset</a>
-                <a href="/dashboard.html">Ops Dashboard</a>
-                <a href="/simulation.html">Simulation</a>
-                <a href="/executive.html">Executive View</a>
+                <a href="/dashboard.html">Dashboard Operasi</a>
+                <a href="/simulation.html">Simulasi</a>
+                <a href="/executive.html">Tampilan Eksekutif</a>
             </nav>
         </header>
 
-        <h1>LaDe Dataset Explorer</h1>
-        <p>Real-world Last-mile Delivery data (Sample). Source: HuggingFace (Cainiao-AI).</p>
+        <h1>Penjelajah Dataset LaDe</h1>
+        <p>Data pengiriman Last-mile dunia nyata (Sampel). Sumber: HuggingFace (Cainiao-AI).</p>
 
         <div class="glass-card">
             <div style="overflow-x: auto;">
