--- a/lade_xgb_decision_web/frontend/executive.html
+++ b/lade_xgb_decision_web/frontend/executive.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Executive View - LaDe</title>
+    <title>Tampilan Eksekutif - LaDe</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -13,47 +13,47 @@
 <body>
     <div class="container">
         <header>
-            <a href="/" class="logo">Entropiata Logistics</a>
+            <a href="/" class="logo">Sistem Monitoring Risiko Keterlambatan</a>
             <nav>
-                <a href="/">Home</a>
+                <a href="/">Beranda</a>
                 <a href="/dataset.html">Dataset</a>
-                <a href="/dashboard.html">Ops Dashboard</a>
-                <a href="/simulation.html">Simulation</a>
-                <a href="/executive.html" class="active">Executive View</a>
+                <a href="/dashboard.html">Dashboard Operasi</a>
+                <a href="/simulation.html">Simulasi</a>
+                <a href="/executive.html" class="active">Tampilan Eksekutif</a>
             </nav>
         </header>
 
-        <h1>Executive Performance Summary</h1>
-        <p>Financial Impact & Strategic Risk Overview</p>
+        <h1>Ringkasan Kinerja Eksekutif</h1>
+        <p>Dampak Finansial & Tinjauan Risiko Strategis</p>
 
         <div class="grid">
             <div class="glass-card">
-                <div class="stat-label">Total Risk Exposure</div>
-                <div class="stat-value text-danger" id="exec-risk">Loading...</div>
-                <div class="text-secondary">Monetary Value at Risk</div>
+                <div class="stat-label">Total Eksposur Risiko</div>
+                <div class="stat-value text-danger" id="exec-risk">Memuat...</div>
+                <div class="text-secondary">Nilai Moneter yang Berisiko</div>
             </div>
             <div class="glass-card">
-                <div class="stat-label">Intervention Efficiency</div>
-                <div class="stat-value text-success" id="exec-efficiency">Loading...</div>
-                <div class="text-secondary">Avoided Cost (Est.)</div>
+                <div class="stat-label">Efisiensi Intervensi</div>
+                <div class="stat-value text-success" id="exec-efficiency">Memuat...</div>
+                <div class="text-secondary">Biaya yang Dihindari (Est.)</div>
             </div>
             <div class="glass-card">
-                <div class="stat-label">Compliance Rate</div>
-                <div class="stat-value text-primary" id="exec-compliance">Loading...</div>
-                <div class="text-secondary">SLA Adherence</div>
+                <div class="stat-label">Tingkat Kepatuhan</div>
+                <div class="stat-value text-primary" id="exec-compliance">Memuat...</div>
+                <div class="text-secondary">Kepatuhan SLA</div>
             </div>
             <div class="glass-card">
-                <div class="stat-label">Net Cost Savings</div>
-                <div class="stat-value text-success" id="exec-savings">Loading...</div>
-                <div class="text-secondary">vs. Unmanaged Baseline</div>
+                <div class="stat-label">Penghematan Biaya Bersih</div>
+                <div class="stat-value text-success" id="exec-savings">Memuat...</div>
+                <div class="text-secondary">vs. Baseline Tanpa Manajemen</div>
             </div>
         </div>
 
         <div style="margin-top: 3rem;">
             <div class="glass-card">
-                <h3>Strategic Insight</h3>
+                <h3>Wawasan Strategis</h3>
                 <p id="strategic-text" style="font-size: 1.2rem; line-height: 1.6;">
-                    Loading strategic analysis...
+                    Memuat analisis strategis...
                 </p>
             </div>
         </div>
