--- a/lade_xgb_decision_web/frontend/index.html
+++ b/lade_xgb_decision_web/frontend/index.html
@@ -1,56 +1,63 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LaDe Decision Intelligence</title>
+    <title>Intelijen Keputusan LaDe</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
     <div class="container">
         <header>
-            <a href="/" class="logo">Entropiata Logistics</a>
+            <a href="/" class="logo">Sistem Monitoring Risiko Keterlambatan</a>
             <nav>
-                <a href="/" class="active">Home</a>
+                <a href="/" class="active">Beranda</a>
                 <a href="/dataset.html">Dataset</a>
-                <a href="/dashboard.html">Ops Dashboard</a>
-                <a href="/simulation.html">Simulation</a>
-                <a href="/executive.html">Executive View</a>
+                <a href="/dashboard.html">Dashboard Operasi</a>
+                <a href="/simulation.html">Simulasi</a>
+                <a href="/executive.html">Tampilan Eksekutif</a>
             </nav>
         </header>
 
         <section class="hero">
-            <h1>Next-Gen Last-Mile Analytics</h1>
-            <p>Predict delays, simulate interventions, and optimize financial risk with decision intelligence powered by the LaDe dataset.</p>
-            <a href="/dashboard.html" class="btn">Launch Operations Dashboard</a>
+            <h1>Analitik Last-Mile Generasi Terbaru</h1>
+            <p>Prediksi keterlambatan, simulasi intervensi, dan optimalkan risiko finansial dengan intelijen keputusan
+                berbasis dataset LaDe.</p>
+            <a href="/dashboard.html" class="btn">Buka Dashboard Operasi</a>
         </section>
 
         <div class="grid">
             <div class="glass-card">
-                <h3>🔮 Predictive Risk</h3>
-                <p>XGBoost models predict SLA breaches in real-time with high accuracy, allowing proactive intervention.</p>
+                <h3>🔮 Prediksi Risiko</h3>
+                <p>Model XGBoost memprediksi pelanggaran SLA secara real-time dengan akurasi tinggi, memungkinkan
+                    intervensi proaktif.</p>
             </div>
             <div class="glass-card">
-                <h3>🎛️ What-If Simulation</h3>
-                <p>Adjust risk thresholds and cost parameters to see immediate financial impact and operational load.</p>
+                <h3>🎛️ Simulasi What-If</h3>
+                <p>Sesuaikan ambang batas risiko dan parameter biaya untuk melihat dampak finansial dan beban
+                    operasional secara langsung.</p>
             </div>
             <div class="glass-card">
-                <h3>💹 Economic Impact</h3>
-                <p>Translate model probabilities into Rupiah values. Minimize the total cost of late penalties and interventions.</p>
+                <h3>💹 Dampak Ekonomi</h3>
+                <p>Terjemahkan probabilitas model ke dalam nilai Rupiah. Minimalkan total biaya penalti keterlambatan
+                    dan intervensi.</p>
             </div>
         </div>
 
         <section style="margin-top: 4rem;">
-            <h2>System Architecture</h2>
+            <h2>Arsitektur Sistem</h2>
             <div class="glass-card" style="margin-top: 1rem;">
                 <p style="text-align: center; color: var(--text-secondary);">
-                    LaDe Data Stream → Feature Engineering → XGBoost Inference → Decision Policy Engine → Financial Risk Evaluation
+                    Aliran Data LaDe → Rekayasa Fitur → Inferensi XGBoost → Mesin Kebijakan Keputusan → Evaluasi Risiko
+                    Finansial
                 </p>
             </div>
         </section>
     </div>
 </body>
+
 </html>
